add advertisement and panel fot this

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rocket",
-  "name": "Rocket Shop",
+  "short_name": "Frog",
+  "name": "Crypto Frog",
   "icons": [
     {
       "src": "favicon.png",
