--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-helmet": "^6.1.0",
     "react-i18next": "^14.0.0",
     "react-modal": "^3.16.1",
